# SimpleSfMViz

./: .gitignore  CMakeLists.txt  README.md  attentions.txt  buildRGBD.sh  chlib-gpu.sh  chlib-nogpu.sh  main.qml  qml.qrc  readme.md
.github/workflows/: main.yml
Engine/: .gitignore  CMakeLists.txt  resources.qrc
Engine/data/config/: rgbd.yaml  src.yaml
Engine/include/: AppConstants.h  QCSVHelper.h  QColorPrj.h  QConfigDialog.h  QEmbeddedWindow.h  QHelpDialog.h  QOptimize.h  QPCLVisual.h  QRebuilder.h  QRecognizer.h  QSlam.h  QTimerHelper.h  mainwindow.h  yolo.h
Engine/src/: QColorPrj.cpp  QConfigDialog.cpp  QEmbeddedWindow.cpp  QHelpDialog.cpp  QOptimize.cpp  QPCLVisual.cpp  QRebuilder.cpp  QRecognizer.cpp  QSlam.cpp  main.cpp  mainwindow.cpp  yolo.cpp
Engine/ui/: mainwindow.ui  qconfigdialog.ui  qhelpdialog.ui
Model/darknet/: CMakeLists.txt  Makefile  opencv.conf  uselib
Model/darknet-gpu/: darknet
Model/yolov4-learn/: CMakeLists.txt  main.cpp
Model/yolov4-learn/data/: 2021-04-25 131748.heic
Model/yolov4-learn/include/: yolo_head.h
ORB_SLAM3/src/: Frame.cc  LocalMapping.cc  Settings.cc  System.cc  Tracking.cc  Viewer.cc
Resources/doc/: gtk-libs.txt  ros_node_structure  system_layer
Script/: buildRGBD.sh
Slam/: CMakeLists.txt  main.cpp
Slam/Examples/RGB-D/: kinect  test_slam_system.cpp
Slam/include/: System.h
Slam/src/: Settings.cc  System.cc  Tracking.cc  Viewer.cc
assest/: CameraControls.qml  fragment.shader  fragment_shader.glsl  main.qml  qml.qrc  vertex.shader  vertex_shader.glsl
assest/data/hand_gestures/hand_0/: image_0004.pcd  image_0005.pcd  image_0006.pcd  image_0007.pcd
assest/data/hand_gestures/hand_1/: image_0004.pcd  image_0006.pcd  image_0007.pcd  image_0008.pcd  image_0009.pcd
assest/data/hand_gestures/hand_2/: image_0003.pcd  image_0004.pcd  image_0005.pcd
assest/data/hand_gestures/hand_3/: image_0005.pcd  image_0006.pcd  image_0008.pcd  image_0009.pcd
assest/data/hand_gestures/hand_4/: image_0003.pcd  image_0005.pcd  image_0007.pcd
assest/data/hand_gestures/hand_5/: image_0000.pcd  image_0004.pcd  image_0006.pcd  image_0009.pcd
assest/data/hand_gestures/hand_6/: image_0001.pcd  image_0003.pcd  image_0005.pcd  image_0008.pcd  image_0009.pcd
assest/qml/: CameraControls.qml  MainScreen.qml  pointcloud.qml  pointcloud.qml.autosave
assest/qml/Screen/: CameraControls.qml  pointcloud2.qml
assest/shader/: fragment_shader.glsl  pointcloud.vert  vertex_shader.glsl
assets/: qml.qrc
assets/data/: sample_5184×3456.pcd
assets/qml/: MainScreen.qml  TestScreen.qml  main.qml
assets/qml/Component/: QButton.qml  QMenuBar.qml
assets/qml/Component/Common/: QImage.qml  (+3 more)
assets/qml/Screen/: CameraControls.qml  openGL.qml
assets/shader/: vertex_shader.glsl
build-Engine-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  ui_qconfigdialog.h  ui_qhelpdialog.h
build-Engine-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Engine-Desktop_Qt_5_15_2_GCC_64bit-Debug/GreenHouseAR_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-Engine-Desktop_Qt_5_15_2_GCC_64bit-Debug/GreenHouseAR_autogen/6YEA5652QU/: moc_QConfigDialog.cpp  moc_QConfigDialog.cpp.d  moc_QHelpDialog.cpp  moc_QHelpDialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
cmake_modules/: FindGLM.cmake
darknet-gpu/: CMakeLists.txt  Makefile  uselib
doc/: qrgbd
include/: AppEngine.h  Constant.h  QCameraControl.h  QPointCloud.h  QPointCloudRenderer.h  QPointCloudViewer.h  QShaderProgram.h
include/Common/: AppEnums.h  QConfig.h
include/Handler/: QmlHandler.h
include/Model/: AppConstant.h  AppModel.h
include/Plugin/Camera/: QCameraCapture.h  QImageProvider.h  QRosBagReader.h
include/Plugin/DataVisualize/: QComboBoxModel.h  QProgressBarDialog.h
include/Plugin/OpenGL/: QAxisAlignedBoundingBox.h  QPointCloud.h
include/Plugin/SfM/: QImageLoader.h  QSfM.h  QSimpleSfMHepler.h
include/Plugin/openGL/: QOpenGLCamera.h  QPointCloudRenderer.h  QPointCloudViewer.h
include/Plugin/pcl/: QPointCloudGeometry.h
include/View/: QPointCloudViewer.h  Screen_Def.h
include/openGL/: QPointCloud.h  QPointCloudLoader.h  QPointCloudRenderer.h  QPointCloudUnderlay.h  QPointCloudViewer.h  QPointField.h
include/pcl/: QPointCloud.h  QPointCloudGeometry.h  QPointCloudLoader.h
qrgbd/: CMakeLists.txt  configdialog.h  embed.cpp  helpdialog.cpp  helpdialog.h  mainwindow.cpp  mainwindow.ui  optimize.cpp  optimize.h  pcl_visual.cpp  pcl_visual.h  rebuilder.h  recognizer.cpp  resource.qrc  slam.h  timer.h  yolo.cpp
qrgbd/include/: colorPrj.h  csv.h  embed.h  mainwindow.h  optimize.h  pcl_visual.h  rebuilder.h  recognizer.h
qrgbd/src/: colorPrj.cpp  configdialog.cpp  mainwindow.cpp  rebuilder.cpp  slam.cpp  yolo.cpp
qrgbd/ui/: configdialog.ui  helpdialog.ui
src/: AppEngine.cpp  QCameraControl.cpp  QPointCloud.cpp  QPointCloudRenderer.cpp  QPointCloudUnderlay.cpp  QPointCloudViewer.cpp  QShaderProgram.cpp  main.cpp
src/Common/: AppEnums.cpp  QConfig.cpp
src/Handler/: QmlHandler.cpp
src/Model/: AppModel.cpp
src/Plugin/Camera/: QCameraCapture.cpp  QImageProvider.cpp  QRosBagReader.cpp
src/Plugin/DataVisualize/: QComboBoxModel.cpp  QProgressBarDialog.cpp
src/Plugin/OpenGL/: QAxisAlignedBoundingBox.cpp  QOpenGLCamera.cpp  QPointCloud.cpp  QPointCloudLoader.cpp  QPointCloudRenderer.cpp  QPointField.cpp
src/Plugin/SfM/: QImageLoader.cpp  QSfM.cpp  QSimpleSfMHepler.cpp
src/Plugin/openGL/: QCameraControl.cpp  QOpenGLCamera.cpp  QPointCloud.cpp  QPointCloudLoader.cpp  QPointCloudRenderer.cpp  QPointCloudViewer.cpp  QPointField.cpp
src/Plugin/pcl/: QPointCloudGeometry.cpp
src/View/: QPointCloudViewer.cpp
src/openGL/: QPointCloud.cpp  QPointCloudLoader.cpp  QPointCloudRenderer.cpp  QPointCloudUnderlay.cpp  QPointCloudViewer.cpp
src/pcl/: QPointCloud.cpp  QPointCloudGeometry.cpp  QPointCloudLoader.cpp  QPointField.cpp
test/: CMakeLists.txt  kinect.cc
yolov4-learn/: CMakeLists.txt
yolov4-learn/include/: yolo_v2_class.hpp
yolov4-learn/src/: yolo.cpp
(+282 files in other folders)
